--- a/Angular/myApp/src/app/auth/login/login.component.html
+++ b/Angular/myApp/src/app/auth/login/login.component.html
@@ -1,17 +1,20 @@
 <div class="flex h-screen justify-center">
-<form class="p-4 rounded-lg border m-auto w-1/3">
+<form class="p-4 rounded-lg border m-auto w-1/3" (ngSubmit)="submit()"
+#myForm="ngForm" >
     <h1 class="text-center text-xl">Login</h1>
     <div class="my-5 w-full">
         <label for="email">Email</label>
-        <input type="email" class="w-full p-2 border rounded" id="email" placeholder="Email address" [(ngModel)] ="email" />
+        <input type="email" class="w-full p-2 border rounded" id="email" placeholder="Email address" [(ngModel)] ="form.email" name="email" />
         </div>
-        {{email}}
+        
         <div class="my-5 w-full">
             <label for="password">Password</label>
-            <input type="password" class="w-full p-2 border rounded" id="password" placeholder="Email address"  />
+            <input type="password" class="w-full p-2 border rounded" id="password" placeholder="Email address" [(ngModel)]="form.password" name="password" />
             </div>
             <div class="my-5 w-full">
-                <input type="submit" class="w-full p-2 bg-purple-700 text-white hover:bg-purple-900" id="email" placeholder="Email address"  />
+                <input type="submit" 
+                [disabled]="myForm.form.invalid"
+                class="w-full p-2 bg-purple-700 text-white hover:bg-purple-900"   />
                 </div>
 </form>
-</div>
+</div>  
