--- a/Angular/myApp/src/app/auth/register/register.component.html
+++ b/Angular/myApp/src/app/auth/register/register.component.html
@@ -1,1 +1,50 @@
-<p>register works!</p>
+<div class="flex h-screen justify-center">
+    <form class="p-4 rounded-lg border m-auto w-1/3" (ngSubmit)="submit()"
+    #myForm="ngForm" >
+        <h1 class="text-center text-xl">Login</h1>
+        <div class="my-5 w-full">
+            <label for="email">Email</label>
+            <input type="email" class="w-full p-2 border rounded" id="email" placeholder="Email address" [(ngModel)] ="form.email" name="email" 
+            #email="ngModel" required
+            />
+            </div>
+            <div *ngIf="email.invalid&&(email.dirty||email.touched)"
+            class="p-2 bg-red-300 text-red-800 rounded"
+
+            >
+            Email field must be valid
+
+            </div>
+            <div class="my-5 w-full">
+                <label for="password">Password</label>
+                <input type="password" class="w-full p-2 border rounded" id="password" placeholder="password" [(ngModel)]="form.password" name="password" />
+                </div>
+                <div *ngIf="password.invalid&&(password.dirty||password.touched)"
+            class="p-2 bg-red-300 text-red-800 rounded"
+
+            >
+            password field must be valid
+
+            </div>
+                <div class="my-5 w-full">
+                    <label for="password">Confirm Password</label>
+                    <input type="password" class="w-full p-2 border rounded" id="confirm_password" placeholder="confirm password"
+                    name="confirm_password"
+                    [(ngModel)]="form.confirm_password"
+                    #confirm_password="ngModel"
+                    required />
+                    </div>
+                    <div *ngIf="confirm_password.invalid&&(confirm_password.dirty||confirm_password.touched)"
+            class="p-2 bg-red-300 text-red-800 rounded"
+
+            >
+            confirm password field must be valid
+
+            </div>
+                <div class="my-5 w-full">
+                    <input type="submit" 
+                    [disabled]="myForm.form.invalid"
+                    class="w-full p-2 bg-purple-700 text-white hover:bg-purple-900"   />
+                    </div>
+    </form>
+    </div>  
