--- a/Angular/learning2/src/app/app.component.html
+++ b/Angular/learning2/src/app/app.component.html
@@ -75,3 +75,6 @@
   <app-user-details [item]="user"></app-user-details>
 
 </ul>
+<input type="text" [(ngModel)]="current" placeholder="Enter Name"/>
+<br/>
+<h2>{{current}}</h2>
