--- a/Angular/learning2/src/app/about/about.component.html
+++ b/Angular/learning2/src/app/about/about.component.html
@@ -1,9 +1,3 @@
-<p>about works!</p>
-<a routerLink="/about/company">About Company</a>
-<br/>
-<a>hello</a>
-<!-- <a routerLink="me">About Me</a>
-<br/> 
-<a>Hello</a> -->
-<!-- <a routerLink="/">Hello</a> -->
+<!-- app.component.html or any other component template -->
+<!-- <a routerLink="company">About Company</a> -->
 <!-- <router-outlet></router-outlet> -->
