angular video done

--- a/Angular/learning3/src/app/app.component.html
+++ b/Angular/learning3/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1>Lazy Loading</h1>
 <h1>Admin Routing</h1>
 <ul>
   <li><a routerLink="admin/login">Login</a></li>
@@ -9,3 +10,7 @@
   <li><a routerLink="user/signup">Sign Up</a></li>
 </ul>
 <router-outlet></router-outlet>
+<h1>Lazy Component Routing</h1>
+<button (click)="loadAdmin()">Load Admin List</button>
+<button (click)="loadUser()">Load User List</button>
+
